--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,13 @@
     <artifactId>selenium-course</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
@@ -136,6 +143,11 @@
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-remote-driver</artifactId>
             <version>3.141.59</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.Visual-Regression-Tracker</groupId>
+            <artifactId>sdk-java</artifactId>
+            <version>1.3.0</version>
         </dependency>
     </dependencies>
 </project>
